# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ark_js_moduletest") {
  testonly = true
  deps = [
    "async:asyncAction",
    "bitwiseop:bitwiseopAction",
    "callframe:callframeAction",
    "class:classAction",
    "container:containerAction",
    "dyninstruction:dyninstructionAction",
    "fortest:fortestAction",
    "generator:generatorAction",
    "getunmappedargs:getunmappedargsAction",
    "globalrecord:globalrecordAction",
    "helloworld:helloworldAction",
    "lexicalenv:lexicalenvAction",
    "module:moduleAction",
    "multiargs:multiargsAction",
    "newobjdynrange:newobjdynrangeAction",
    "promise:promiseAction",
    "spreadoperator:spreadoperatorAction",
    "throwdyn:throwdynAction",
    "yieldstar:yieldstarAction",
  ]
}
