# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//ark/js_runtime/js_runtime_config.gni")
import("//ark/js_runtime/test/test_helper.gni")
import("//build/test.gni")

module_output_path = "ark/js_runtime"

host_unittest_action("BuiltinsInternationalTest") {
  module_out_path = module_output_path

  sources = [
    # test file
    "builtins_bigint_test.cpp",
    "builtins_collator_test.cpp",
    "builtins_date_time_format_test.cpp",
    "builtins_displaynames_test.cpp",
    "builtins_intl_test.cpp",
    "builtins_list_format_test.cpp",
    "builtins_locale_test.cpp",
    "builtins_plural_rules_test.cpp",
    "builtins_relative_time_format_test.cpp",
  ]

  configs = [
    "//ark/js_runtime:ecma_test_config",
    "//ark/js_runtime:icu_path_test_config",
  ]

  deps = [
    "$ark_root/libpandabase:libarkbase",
    "//ark/js_runtime:libark_jsruntime_test",
    sdk_libc_secshared_dep,
  ]
}

host_unittest_action("BuiltinsNaturalTest") {
  module_out_path = module_output_path

  sources = [
    # test file
    "builtins_array_test.cpp",
    "builtins_arraybuffer_test.cpp",
    "builtins_boolean_test.cpp",
    "builtins_dataview_test.cpp",
    "builtins_date_test.cpp",
    "builtins_errors_test.cpp",
    "builtins_function_test.cpp",
    "builtins_iterator_test.cpp",
    "builtins_json_test.cpp",
    "builtins_map_test.cpp",
    "builtins_math_test.cpp",
    "builtins_number_test.cpp",
    "builtins_object_test.cpp",
    "builtins_promise_test.cpp",
    "builtins_proxy_test.cpp",
    "builtins_reflect_test.cpp",
    "builtins_regexp_test.cpp",
    "builtins_set_test.cpp",
    "builtins_sharedarraybuffer_test.cpp",
    "builtins_string_iterator_test.cpp",
    "builtins_string_test.cpp",
    "builtins_symbol_test.cpp",
    "builtins_typedarray_test.cpp",
    "builtins_weak_map_test.cpp",
    "builtins_weak_set_test.cpp",
  ]

  configs = [ "//ark/js_runtime:ecma_test_config" ]

  deps = [
    "$ark_root/libpandabase:libarkbase",
    "//ark/js_runtime:libark_jsruntime_test",
    sdk_libc_secshared_dep,
  ]
}

group("unittest") {
  testonly = true

  # deps file
  deps = [
    ":BuiltinsInternationalTest",
    ":BuiltinsNaturalTest",
  ]
}

group("host_unittest") {
  testonly = true

  # deps file
  deps = [
    ":BuiltinsInternationalTestAction",
    ":BuiltinsNaturalTestAction",
  ]
}
