# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//ark/js_runtime/js_runtime_config.gni")
import("//ark/js_runtime/test/test_helper.gni")
import("//build/test.gni")

config("include_llvm_config") {
  include_dirs = [
    "//third_party/llvm-project/llvm/include/",
    "//third_party/llvm-project/build/include",
    "//third_party/llvm-project/llvm/build/include",
  ]
}

module_output_path = "ark/js_runtime"

host_unittest_action("StubOptimizerTest") {
  module_out_path = module_output_path

  sources = [
    # test file
    "stub_optimizer_tests.cpp",
  ]
  configs = [
    ":include_llvm_config",
    "//ark/js_runtime:ecma_test_config",
    "//ark/js_runtime/ecmascript/compiler:ark_jsruntime_compiler_config",
    "//ark/js_runtime:ark_jsruntime_public_config",
    "$ark_root/runtime:arkruntime_public_config",
  ]

  lib_dirs = [ "//third_party/llvm-project/build/lib" ]

  libs = [
    "stdc++",
    "z",
    "tinfo",
    "LTO",
    "LLVMTarget",
    "LLVMObject",
    "LLVMMC",
    "LLVMSupport",
    "LLVMCore",
    "LLVMExecutionEngine",
    "LLVMInterpreter",
    "LLVMMCJIT",
    "LLVMExegesis",
    "LLVMRuntimeDyld",
    "LLVMInstCombine",
    "LLVMAnalysis",
    "LLVMScalarOpts",
    "LLVMBinaryFormat",
    "LLVMDebugInfoDWARF",
    "LLVMRemarks",
    "LLVMTextAPI",
    "LLVMScalarOpts",
    "LLVMTransformUtils",
    "LLVMBitReader",
    "LLVMSystemZInfo",
    "LLVMAsmPrinter",
    "LLVMProfileData",
    "LLVMBitstreamReader",
    "LLVMSelectionDAG",
    "LLVMGlobalISel",
    "LLVMLTO",
    "LLVMCFGuard",
    "LLVMVectorize",
    "LLVMDemangle",
    "LLVMipo",
    "LLVMInstrumentation",
    "LLVMDebugInfoCodeView",
    "LLVMAggressiveInstCombine",
    "LLVMAsmParser",
    "LLVMMipsAsmParser",
    "LLVMMCParser",
    "LLVMMIRParser",
    "LLVMMSP430AsmParser",
    "LLVMX86Info",
    "LLVMAArch64Info",
    "LLVMLanaiInfo",
    "LLVMAMDGPUInfo",
    "LLVMARMInfo",
    "LLVMHexagonInfo",
    "LLVMNVPTXInfo",
    "LLVMRISCVInfo",
    "LLVMSparcInfo",
    "LLVMMipsInfo",
    "LLVMWebAssemblyInfo",
    "LLVMBPFInfo",
    "LLVMMSP430Info",
    "LLVMPowerPCInfo",
    "LLVMXCoreInfo",
    "LLVMARMDesc",
    "LLVMAArch64Desc",
    "LLVMSparcDesc",
    "LLVMAMDGPUDesc",
    "LLVMXCoreDesc",
    "LLVMWebAssemblyDesc",
    "LLVMNVPTXDesc",
    "LLVMMSP430Desc",
    "LLVMPowerPCDesc",
    "LLVMMipsDesc",
    "LLVMRISCVDesc",
    "LLVMLanaiDesc",
    "LLVMSystemZDesc",
    "LLVMHexagonDesc",
    "LLVMX86Desc",
    "LLVMBPFDesc",
    "LLVMSparcDisassembler",
    "LLVMRISCVDisassembler",
    "LLVMMipsDisassembler",
    "LLVMXCoreDisassembler",
    "LLVMPowerPCDisassembler",
    "LLVMX86Disassembler",
    "LLVMMSP430Disassembler",
    "LLVMARMDisassembler",
    "LLVMLanaiDisassembler",
    "LLVMAArch64Disassembler",
    "LLVMBPFDisassembler",
    "LLVMSystemZDisassembler",
    "LLVMMCDisassembler",
    "LLVMWebAssemblyDisassembler",
    "LLVMHexagonDisassembler",
    "LLVMAMDGPUDisassembler",
    "LLVMXCoreCodeGen",
    "LLVMPowerPCCodeGen",
    "LLVMNVPTXCodeGen",
    "LLVMAArch64CodeGen",
    "LLVMMSP430CodeGen",
    "LLVMARMCodeGen",
    "LLVMMipsCodeGen",
    "LLVMSparcCodeGen",
    "LLVMBPFCodeGen",
    "LLVMHexagonCodeGen",
    "LLVMAMDGPUCodeGen",
    "LLVMRISCVCodeGen",
    "LLVMWebAssemblyCodeGen",
    "LLVMSystemZCodeGen",
    "LLVMCodeGen",
    "LLVMX86CodeGen",
    "LLVMLanaiCodeGen",
    "LLVMX86AsmParser",
    "LLVMAMDGPUUtils",
    "LLVMRISCVUtils",
    "LLVMTransformUtils",
    "LLVMAArch64Utils",
    "LLVMARMUtils",
    "LLVMX86Utils",
    "LLVMIRReader",
  ]

  deps = [
    "$ark_root/libpandabase:libarkbase",
    "$ark_root/runtime:libarkruntime",
    "//ark/js_runtime:libark_jsruntime_test",
    "//ark/js_runtime/ecmascript/compiler:libark_jsoptimizer(${host_toolchain})",
    sdk_libc_secshared_dep,
  ]
}

group("host_unittest") {
  testonly = true

  # deps file
  deps = [ ":StubOptimizerTestAction(${host_toolchain})" ]
}
