# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//ark/js_runtime/test/test_helper.gni")
import("//ark/js_runtime/js_runtime_config.gni")
import("//build/test.gni")

module_output_path = "ark/js_runtime"

host_unittest_action("DynChunkTest") {
  module_out_path = module_output_path

  sources = [
    # test file
    "dyn_chunk_test.cpp",
  ]

  configs = [
    "//ark/js_runtime:ecma_test_config",
    "//ark/js_runtime:ark_jsruntime_public_config",  # should add before
                                                     # arkruntime_public_config
    "//ark/js_runtime:ark_jsruntime_config",
    "$ark_root/runtime:arkruntime_public_config",
  ]

  deps = [
    "$ark_root/libpandabase:libarkbase",
    sdk_libc_secshared_dep,
  ]
}

host_unittest_action("RegexpTest") {
  module_out_path = module_output_path

  sources = [
    # test file
    "regexp_test.cpp",
  ]

  configs = [
    "//ark/js_runtime:ecma_test_config",
    "//ark/js_runtime:ark_jsruntime_public_config",  # should add before
                                                     # arkruntime_public_config
    "//ark/js_runtime:ark_jsruntime_config",
    "$ark_root/runtime:arkruntime_public_config",
  ]

  deps = [
    "$ark_root/libpandabase:libarkbase",
    sdk_libc_secshared_dep,
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":DynChunkTest",
    ":RegexpTest",
  ]
}

group("host_unittest") {
  testonly = true
  deps = [
    ":DynChunkTestAction(${host_toolchain})",
    ":RegexpTestAction(${host_toolchain})",
  ]
}
